--- a/Primary_school data prepration.ipynb
+++ b/Primary_school data prepration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,50 @@
     "df['starting_times']=df['starting_times']-df['starting_times'].min()\n",
     "df[\"ending_times\"] = df[\"starting_times\"] + 20\n",
     "df['durations']=df[\"ending_times\"] -df[\"starting_times\"] \n",
+    "df['source_nodes']=df['source_nodes'].astype(int)\n",
+    "df['target_nodes']=df['target_nodes'].astype(int)\n",
+    "\n",
+    "df['ending_times']=df['ending_times'].astype(int)\n",
+    "df['starting_times']=df['starting_times'].astype(int)\n",
+    "df['durations']=df['durations'].astype(int)\n",
+    "\n",
+    "df['source_nodes']=df['source_nodes'].map(mapping)\n",
+    "df['target_nodes']=df['target_nodes'].map(mapping)\n",
+    "\n",
     "df.to_csv('Pre_processed_Data\\primary_school_day2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v=set(df['source_nodes']).union(df['target_nodes'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 1: 1, 2: 2, 3: 3, 4: 4, 5: 5, 6: 6, 7: 7, 8: 8, 9: 9, 10: 10, 11: 11, 12: 12, 13: 13, 14: 14, 15: 15, 16: 16, 17: 17, 18: 18, 19: 19, 20: 20, 21: 21, 22: 22, 23: 23, 24: 24, 25: 25, 26: 26, 27: 27, 28: 28, 29: 29, 30: 30, 31: 31, 32: 32, 33: 33, 34: 34, 35: 35, 36: 36, 37: 37, 38: 38, 39: 39, 40: 40, 41: 41, 42: 42, 43: 43, 44: 44, 45: 45, 46: 46, 47: 47, 48: 48, 49: 49, 50: 50, 51: 51, 52: 52, 53: 53, 54: 54, 55: 55, 56: 56, 57: 57, 58: 58, 59: 59, 60: 60, 61: 61, 62: 62, 63: 63, 64: 64, 65: 65, 66: 66, 67: 67, 68: 68, 69: 69, 70: 70, 71: 71, 72: 72, 73: 73, 74: 74, 75: 75, 76: 76, 77: 77, 78: 78, 79: 79, 80: 80, 81: 81, 82: 82, 83: 83, 84: 84, 85: 85, 86: 86, 87: 87, 88: 88, 89: 89, 90: 90, 91: 91, 92: 92, 93: 93, 94: 94, 95: 95, 96: 96, 97: 97, 98: 98, 99: 99, 100: 100, 101: 101, 102: 102, 103: 103, 104: 104, 105: 105, 106: 106, 107: 107, 108: 108, 109: 109, 110: 110, 111: 111, 112: 112, 113: 113, 114: 114, 115: 115, 116: 116, 117: 117, 118: 118, 119: 119, 120: 120, 122: 121, 123: 122, 124: 123, 125: 124, 126: 125, 127: 126, 128: 127, 129: 128, 130: 129, 131: 130, 132: 131, 133: 132, 134: 133, 135: 134, 136: 135, 137: 136, 138: 137, 139: 138, 140: 139, 141: 140, 142: 141, 143: 142, 144: 143, 145: 144, 146: 145, 147: 146, 148: 147, 149: 148, 150: 149, 151: 150, 152: 151, 153: 152, 154: 153, 155: 154, 156: 155, 157: 156, 158: 157, 159: 158, 160: 159, 161: 160, 162: 161, 163: 162, 164: 163, 165: 164, 166: 165, 167: 166, 168: 167, 169: 168, 170: 169, 171: 170, 173: 171, 174: 172, 175: 173, 176: 174, 177: 175, 178: 176, 179: 177, 180: 178, 181: 179, 182: 180, 183: 181, 184: 182, 185: 183, 186: 184, 187: 185, 188: 186, 189: 187, 190: 188, 191: 189, 192: 190, 193: 191, 194: 192, 195: 193, 196: 194, 197: 195, 198: 196, 199: 197, 200: 198, 201: 199, 202: 200, 203: 201, 204: 202, 205: 203, 206: 204, 208: 205, 209: 206, 210: 207, 211: 208, 212: 209, 214: 210, 215: 211, 216: 212, 217: 213, 218: 214, 219: 215, 220: 216, 221: 217, 222: 218, 223: 219, 224: 220, 225: 221, 226: 222, 227: 223, 228: 224, 229: 225, 230: 226, 231: 227, 232: 228, 233: 229, 234: 230, 235: 231, 236: 232, 237: 233, 238: 234, 239: 235, 240: 236, 241: 237}\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing = {121, 172, 207, 213}\n",
+    "all_nodes = list(range(242))  # 1 to 242 inclusive\n",
+    "present_nodes = [n for n in all_nodes if n not in missing]\n",
+    "\n",
+    "# Map each present node to a new continuous label starting from 0\n",
+    "mapping = {old: new for new, old in enumerate(present_nodes)}\n",
+    "\n",
+    "print(mapping)\n"
    ]
   }
  ],
