--- a/Primary_school flowstab analysis.ipynb
+++ b/Primary_school flowstab analysis.ipynb
@@ -2,32 +2,152 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-11 10:38:22,499 - INFO - flowstab\\flow_stability.py:235 - PID:56436 - Set an empty temporal network.\n",
-      "2025-11-11 10:38:22,500 - INFO - flowstab\\flow_stability.py:139 - PID:56436 - Successfully initiated a FlowStability instance!\n"
+      "2025-11-11 17:58:49,013 - INFO - flowstab\\flow_stability.py:235 - PID:23404 - Set an empty temporal network.\n",
+      "2025-11-11 17:58:49,013 - INFO - flowstab\\flow_stability.py:139 - PID:23404 - Successfully initiated a FlowStability instance!\n",
+      "2025-11-11 17:58:49,024 - INFO - flowstab\\flow_stability.py:230 - PID:23404 - Set the temporal network: <class 'flowstab.temporal_network.ContTempNetwork'> with 238 nodes and 65150 events\n",
+      "2025-11-11 17:58:49,024 - INFO - flowstab\\temporal_network.py:1176 - PID:23404 - Computing Laplacians\n",
+      "2025-11-11 17:58:49,075 - INFO - flowstab\\temporal_network.py:1266 - PID:23404 - 0 over 1545\n",
+      "2025-11-11 17:58:49,075 - INFO - flowstab\\temporal_network.py:1270 - PID:23404 - 0.00s\n",
+      "2025-11-11 17:59:10,414 - INFO - flowstab\\temporal_network.py:1266 - PID:23404 - 1000 over 1545\n",
+      "2025-11-11 17:59:10,415 - INFO - flowstab\\temporal_network.py:1270 - PID:23404 - 21.34s\n",
+      "2025-11-11 17:59:19,398 - INFO - flowstab\\temporal_network.py:1326 - PID:23404 - Finished in 30.323020696640015\n",
+      "2025-11-11 17:59:19,398 - INFO - flowstab\\flow_stability.py:530 - PID:23404 - Computing inter T matrices for time_scale=0.01.\n",
+      "2025-11-11 18:01:04,679 - INFO - flowstab\\flow_stability.py:541 - PID:23404 - -> done.\n",
+      "2025-11-11 18:01:04,679 - INFO - flowstab\\flow_stability.py:530 - PID:23404 - Computing inter T matrices for time_scale=4.6415888336127775.\n",
+      "2025-11-11 18:02:21,558 - INFO - flowstab\\flow_stability.py:541 - PID:23404 - -> done.\n",
+      "2025-11-11 18:02:21,559 - INFO - flowstab\\flow_stability.py:530 - PID:23404 - Computing inter T matrices for time_scale=2154.4346900318824.\n",
+      "2025-11-11 18:03:00,279 - INFO - flowstab\\flow_stability.py:541 - PID:23404 - -> done.\n",
+      "2025-11-11 18:03:00,279 - INFO - flowstab\\flow_stability.py:530 - PID:23404 - Computing inter T matrices for time_scale=1000000.0.\n",
+      "2025-11-11 18:03:36,387 - INFO - flowstab\\flow_stability.py:541 - PID:23404 - -> done.\n",
+      "2025-11-11 18:03:36,403 - INFO - flowstab\\flow_stability.py:640 - PID:23404 - Creating a flow integral clustering for time_scale=0.01.\n",
+      "2025-11-11 18:03:36,594 - INFO - flowstab\\flow_stability.py:654 - PID:23404 - \t- Creating the time backward clustering.\n",
+      "2025-11-11 18:03:42,414 - INFO - flowstab\\flow_stability.py:668 - PID:23404 - \t- Creating the time forward clustering.\n",
+      "2025-11-11 18:03:47,514 - INFO - flowstab\\flow_stability.py:681 - PID:23404 - -> done.\n",
+      "2025-11-11 18:03:47,515 - INFO - flowstab\\flow_stability.py:640 - PID:23404 - Creating a flow integral clustering for time_scale=4.6415888336127775.\n",
+      "2025-11-11 18:03:47,762 - INFO - flowstab\\flow_stability.py:654 - PID:23404 - \t- Creating the time backward clustering.\n",
+      "2025-11-11 18:03:54,557 - INFO - flowstab\\flow_stability.py:668 - PID:23404 - \t- Creating the time forward clustering.\n",
+      "2025-11-11 18:04:01,354 - INFO - flowstab\\flow_stability.py:681 - PID:23404 - -> done.\n",
+      "2025-11-11 18:04:01,355 - INFO - flowstab\\flow_stability.py:640 - PID:23404 - Creating a flow integral clustering for time_scale=2154.4346900318824.\n",
+      "2025-11-11 18:04:01,592 - INFO - flowstab\\flow_stability.py:654 - PID:23404 - \t- Creating the time backward clustering.\n",
+      "2025-11-11 18:04:08,749 - INFO - flowstab\\flow_stability.py:668 - PID:23404 - \t- Creating the time forward clustering.\n",
+      "2025-11-11 18:04:16,647 - INFO - flowstab\\flow_stability.py:681 - PID:23404 - -> done.\n",
+      "2025-11-11 18:04:16,648 - INFO - flowstab\\flow_stability.py:640 - PID:23404 - Creating a flow integral clustering for time_scale=1000000.0.\n",
+      "2025-11-11 18:04:16,908 - INFO - flowstab\\flow_stability.py:654 - PID:23404 - \t- Creating the time backward clustering.\n",
+      "2025-11-11 18:04:22,853 - INFO - flowstab\\flow_stability.py:668 - PID:23404 - \t- Creating the time forward clustering.\n",
+      "2025-11-11 18:04:28,754 - INFO - flowstab\\flow_stability.py:681 - PID:23404 - -> done.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "([], 'set_temporal_network')"
+       "<class 'flowstab.flow_stability.FlowStability'>\n",
+       "- temporal network: <class 'flowstab.temporal_network.ContTempNetwork'> with 238 nodes and 65150 events\n",
+       "- t_start: None\n",
+       "- t_stop: None\n",
+       "- time_scale: <iterator object at 0x000001CAD73FADA0>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from flowstab.flow_stability import FlowStability\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "from flowstab.network_clustering import avg_norm_var_information\n",
+    "\n",
+    "df=pd.read_csv('Pre_processed_Data\\primary_school_day2.csv')\n",
     "fs = FlowStability()\n",
-    "fs.state.next"
+    "fs.set_temporal_network(events_table=df, relabel_nodes=True)\n",
+    "fs.compute_laplacian_matrices()\n",
+    "taus=np.logspace(-2, 6, 4)\n",
+    "fs.set_time_scale(taus)\n",
+    "fs.compute_inter_transition_matrices()\n",
+    "fs.time_direction = 0  # perform both forward and backard\n",
+    "fs.set_flow_clustering()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 72%|███████▏  | 143/200 [00:20<00:08,  6.85it/s]\n",
+      "  0%|          | 0/4 [00:20<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m#Backward\u001b[39;00m\n\u001b[0;32m     15\u001b[0m fs\u001b[38;5;241m.\u001b[39mflow_clustering_backward[tau]\u001b[38;5;241m.\u001b[39mclustering\u001b[38;5;241m=\u001b[39m{}\n\u001b[1;32m---> 16\u001b[0m fs\u001b[38;5;241m.\u001b[39mflow_clustering_backward[tau]\u001b[38;5;241m.\u001b[39mfind_louvain_clustering()\n\u001b[0;32m     17\u001b[0m clustering_back\u001b[38;5;241m=\u001b[39mfs\u001b[38;5;241m.\u001b[39mflow_clustering_backward[tau]\u001b[38;5;241m.\u001b[39mclustering[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     18\u001b[0m backward_partitions[tau][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclusters\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(clustering_back\u001b[38;5;241m.\u001b[39mpartition\u001b[38;5;241m.\u001b[39mcluster_list)\n",
+      "File \u001b[1;32mc:\\Users\\Yasaman\\anaconda3\\Lib\\site-packages\\flowstab\\network_clustering.py:2140\u001b[0m, in \u001b[0;36mFlowIntegralClustering.find_louvain_clustering\u001b[1;34m(self, k, delta_r_threshold, n_meta_iter_max, n_sub_iter_max, verbose, rnd_seed, save_progress, cluster_list, node_to_cluster_dict, rnd_state, S_threshold)\u001b[0m\n\u001b[0;32m   2133\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   2134\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclustering[k] \u001b[38;5;241m=\u001b[39m SparseClustering(p1\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mp1, p2\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   2135\u001b[0m                       S\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mI_list[k],\n\u001b[0;32m   2136\u001b[0m                       cluster_list\u001b[38;5;241m=\u001b[39mcluster_list,\n\u001b[0;32m   2137\u001b[0m                       node_to_cluster_dict\u001b[38;5;241m=\u001b[39mnode_to_cluster_dict,\n\u001b[0;32m   2138\u001b[0m                       rnd_state\u001b[38;5;241m=\u001b[39mrnd_state, rnd_seed\u001b[38;5;241m=\u001b[39mrnd_seed)\n\u001b[1;32m-> 2140\u001b[0m n_loop \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclustering[k]\u001b[38;5;241m.\u001b[39mfind_louvain_clustering(delta_r_threshold\u001b[38;5;241m=\u001b[39mdelta_r_threshold,\n\u001b[0;32m   2141\u001b[0m                     n_meta_iter_max\u001b[38;5;241m=\u001b[39mn_meta_iter_max,\n\u001b[0;32m   2142\u001b[0m                     n_sub_iter_max\u001b[38;5;241m=\u001b[39mn_sub_iter_max,\n\u001b[0;32m   2143\u001b[0m                     verbose\u001b[38;5;241m=\u001b[39mverbose,\n\u001b[0;32m   2144\u001b[0m                     rnd_seed\u001b[38;5;241m=\u001b[39mrnd_seed,\n\u001b[0;32m   2145\u001b[0m                     save_progress\u001b[38;5;241m=\u001b[39msave_progress)\n\u001b[0;32m   2147\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpartition[k] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclustering[k]\u001b[38;5;241m.\u001b[39mpartition\n\u001b[0;32m   2149\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m n_loop\n",
+      "File \u001b[1;32mc:\\Users\\Yasaman\\anaconda3\\Lib\\site-packages\\flowstab\\network_clustering.py:1463\u001b[0m, in \u001b[0;36mClustering.find_louvain_clustering\u001b[1;34m(self, delta_r_threshold, n_meta_iter_max, n_sub_iter_max, verbose, rnd_seed, save_progress, print_num_loops)\u001b[0m\n\u001b[0;32m   1450\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfind_louvain_clustering\u001b[39m(\u001b[38;5;28mself\u001b[39m, delta_r_threshold\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfinfo(\u001b[38;5;28mfloat\u001b[39m)\u001b[38;5;241m.\u001b[39meps,\n\u001b[0;32m   1451\u001b[0m                             n_meta_iter_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m,\n\u001b[0;32m   1452\u001b[0m                             n_sub_iter_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1455\u001b[0m                             save_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m   1456\u001b[0m                             print_num_loops\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m   1457\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Returns n_meta_loop\u001b[39;00m\n\u001b[0;32m   1458\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[0;32m   1459\u001b[0m \u001b[38;5;124;03m    `rnd_seed` is used to set to state of the random number generator.\u001b[39;00m\n\u001b[0;32m   1460\u001b[0m \u001b[38;5;124;03m    Default is to keep the current state\u001b[39;00m\n\u001b[0;32m   1461\u001b[0m \u001b[38;5;124;03m       \u001b[39;00m\n\u001b[0;32m   1462\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 1463\u001b[0m     n_loop \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39mfind_louvain_clustering(delta_r_threshold\u001b[38;5;241m=\u001b[39mdelta_r_threshold,\n\u001b[0;32m   1464\u001b[0m                             n_meta_iter_max\u001b[38;5;241m=\u001b[39mn_meta_iter_max,\n\u001b[0;32m   1465\u001b[0m                             n_sub_iter_max\u001b[38;5;241m=\u001b[39mn_sub_iter_max,\n\u001b[0;32m   1466\u001b[0m                             verbose\u001b[38;5;241m=\u001b[39mverbose,\n\u001b[0;32m   1467\u001b[0m                             rnd_seed\u001b[38;5;241m=\u001b[39mrnd_seed,\n\u001b[0;32m   1468\u001b[0m                             save_progress\u001b[38;5;241m=\u001b[39msave_progress,\n\u001b[0;32m   1469\u001b[0m                             print_num_loops\u001b[38;5;241m=\u001b[39mprint_num_loops)\n\u001b[0;32m   1471\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpartition \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msource_part\n\u001b[0;32m   1472\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_part \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Yasaman\\anaconda3\\Lib\\site-packages\\flowstab\\network_clustering.py:945\u001b[0m, in \u001b[0;36mBaseClustering.find_louvain_clustering\u001b[1;34m(self, delta_r_threshold, n_meta_iter_max, n_sub_iter_max, verbose, rnd_seed, save_progress, print_num_loops)\u001b[0m\n\u001b[0;32m    940\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m       PID \u001b[39m\u001b[38;5;124m\"\u001b[39m, os\u001b[38;5;241m.\u001b[39mgetpid(),\n\u001b[0;32m    941\u001b[0m           \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m starting meta loop: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_meta_loop\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    944\u001b[0m \u001b[38;5;66;03m# sub loop\u001b[39;00m\n\u001b[1;32m--> 945\u001b[0m delta_r_meta_loop, n_sub_loops \u001b[38;5;241m=\u001b[39m meta_clustering\u001b[38;5;241m.\u001b[39m_louvain_move_nodes(delta_r_threshold,\n\u001b[0;32m    946\u001b[0m                                     n_sub_iter_max,\n\u001b[0;32m    947\u001b[0m                                     print_num_loops)\n\u001b[0;32m    949\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m print_num_loops:\n\u001b[0;32m    950\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m       PID \u001b[39m\u001b[38;5;124m\"\u001b[39m, os\u001b[38;5;241m.\u001b[39mgetpid(),\n\u001b[0;32m    951\u001b[0m           \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m finished meta loop: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_meta_loop\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, number of total sub loops: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_sub_loops\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Yasaman\\anaconda3\\Lib\\site-packages\\flowstab\\network_clustering.py\u001b[0m, in \u001b[0;36mClustering._louvain_move_nodes\u001b[1;34m(self, delta_r_threshold, n_sub_iter_max, verbose, print_num_loops)\u001b[0m\n\u001b[0;32m      0\u001b[0m <Error retrieving source code with stack_data see ipython/ipython#13598>\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "forward_partitions={i: {'clusters':[], 'stability_vals':[]} for i in taus}\n",
+    "backward_partitions={i: {'clusters':[], 'stability_vals':[]} for i in taus}\n",
+    "for tau in taus):\n",
+    "    for i in tqdm(range(200)):\n",
+    "        #Forward\n",
+    "        fs.flow_clustering_forward[tau].clustering={}\n",
+    "        fs.flow_clustering_forward[tau].find_louvain_clustering()\n",
+    "        clustering_for=fs.flow_clustering_forward[tau].clustering[0]\n",
+    "        forward_partitions[tau]['clusters'].append(clustering_for.partition.cluster_list)\n",
+    "        stab_value_for=clustering_for.compute_stability()\n",
+    "        forward_partitions[tau]['stability_vals'].append(stab_value_for)\n",
+    "\n",
+    "\n",
+    "        #Backward\n",
+    "        fs.flow_clustering_backward[tau].clustering={}\n",
+    "        fs.flow_clustering_backward[tau].find_louvain_clustering()\n",
+    "        clustering_back=fs.flow_clustering_backward[tau].clustering[0]\n",
+    "        backward_partitions[tau]['clusters'].append(clustering_back.partition.cluster_list)\n",
+    "        stab_value_back=clustering_back.compute_stability()\n",
+    "        backward_partitions[tau]['stability_vals'].append(stab_value_back)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01 0.0018264485280535014\n",
+      "4.6415888336127775 0.0059890413611124295\n",
+      "2154.4346900318824 0.014594210130516322\n",
+      "1000000.0 0.0002692968240332838\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tau in taus:\n",
+    "    print(tau, avg_norm_var_information(forward_partitions[tau]['clusters']))"
    ]
   },
   {
@@ -37,51 +157,10 @@
    "outputs": [],
    "source": [
     "\n",
-    "# check what to do next\n",
-    "fs.state.next\n",
-    "# Out[3]: ([], 'set_temporal_network')\n",
-    "# > you need to run `set_temporal_network` - how should this be done:\n",
-    "fs.state.howto['set_temporal_network']\n",
-    "# print(fs.state.howto['set_temporal_network'])\n",
-    "# \n",
-    "#         Set the temporal network for the flow stability analysis.\n",
-    "# \n",
-    "#         Parameters\n",
-    "#         ----------\n",
-    "#         **kwargs : dict\n",
-    "#             Arguments to initialize a ContTempNetwork instance.\n",
-    "#         ...\n",
-    "fs.set_temporal_network(events_table=\"my_contacts.csv\")\n",
-    "fs_mice.state.next\n",
-    "# Out[6]: ([], 'compute_laplacian_matrices')\n",
-    "fs.compute_laplacian_matrices()\n",
-    "fs_mice.state.next\n",
-    "# Out[8]: (['time_scale'], 'compute_inter_transition_matrices')\n",
-    "# So we need to set `time_scale` next, but how?\n",
-    "print(fs_mice.state.howto['time_scale'])\n",
-    "# Set the time scale(s) for the random walk's transition rate.\n",
-    "# \n",
-    "# .. note::\n",
-    "#     You might also use `set_time_scale` to directly create a range of\n",
-    "#     time scales.\n",
-    "# \n",
-    "# Parameters\n",
-    "# ----------\n",
-    "# time_scale : None, int, float, or iterator of float\n",
-    "#     If None, a default value is used.\n",
-    "#     If an int or float, a single time scale is set.\n",
-    "#     If an iterator, it must yield float or int values.\n",
-    "# \n",
-    "# ...\n",
-    "fs.set_time_scale(10)\n",
-    "fs_mice.state.next\n",
-    "# Out[11]: ([], 'compute_inter_transition_matrices')\n",
-    "fs.compute_inter_transition_matrices()\n",
-    "fs.time_direction = 0  # perform both forward and backard\n",
-    "fs.set_flow_clustering()\n",
-    "fs.find_louvain_clustering()\n",
-    "fs.flow_clusetering_backward\n",
-    "# Out[17]: {10: <flowstab.network_clustering.FlowIntegralClustering at 0x7fef57a7fd00>}"
+    "        clustering_back=find_louvain(clustering_object_back)\n",
+    "        backward_partitions[tau]['clusters'].append(clustering_back)\n",
+    "        stab_value_back=clustering_back.compute_stability()\n",
+    "        backward_partitions[tau]['stability_vals'].append(stab_value_back)"
    ]
   }
  ],
