--- a/Primary_school flowstab analysis.ipynb
+++ b/Primary_school flowstab analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -735,6 +735,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
+    "import gc\n",
+    "\n",
     "\n",
     "df = pd.read_csv(\"Pre_processed_Data/primary_school_day2.csv\")\n",
     "real_taus = np.logspace(-2, 7, 100)\n",
@@ -749,6 +751,8 @@
     "    fs.time_direction = 0          \n",
     "    fs.set_flow_clustering()\n",
     "    fs._temporal_network.inter_T=None\n",
+    "    gc.collect()\n",
+    "\n",
     "\n",
     "\n",
     "    n_repetitions=200\n",
@@ -761,6 +765,8 @@
     "        forward_partitions['stabilities']=stabilities\n",
     "        np.save(f\"Forward_partitions/forward_partitions-tau={tau}.npy\", forward_partitions, allow_pickle=True)\n",
     "        fs.flow_clustering_forward[tau]=None\n",
+    "        gc.collect()\n",
+    "\n",
     "\n",
     "\n",
     "    for tau in tqdm(taus):\n",
@@ -771,6 +777,8 @@
     "        backward_partitions['stabilities']=stabilities\n",
     "        np.save(f\"Backward_partitions/backward_partitions-tau={tau}.npy\", backward_partitions, allow_pickle=True)\n",
     "        fs.flow_clustering_backward[tau]=None\n",
+    "        gc.collect()\n",
+    "\n",
     "\n",
     "    fs=None"
    ]
