modified:   Primary_school flowstab analysis.ipynb

--- a/Primary_school flowstab analysis.ipynb
+++ b/Primary_school flowstab analysis.ipynb
@@ -772,7 +772,7 @@
     "    for tau in tqdm(taus):\n",
     "        backward_partitions = {}\n",
     "        clus_obj_back=fs.flow_clustering_backward[tau]\n",
-    "        n_loops, cluster_lists, stabilities, seeds=run_multi_louvain(Clustering(p1=clus_obj_back.p1, p2=None,S=clus_obj_back.I_list[0]), num_repeat=n_repetitions)\n",
+    "        _, cluster_lists, stabilities, _=run_multi_louvain(Clustering(p1=clus_obj_back.p1, p2=None,S=clus_obj_back.I_list[0]), num_repeat=n_repetitions)\n",
     "        backward_partitions['clusters']=cluster_lists\n",
     "        backward_partitions['stabilities']=stabilities\n",
     "        np.save(f\"Backward_partitions/backward_partitions-tau={tau}.npy\", backward_partitions, allow_pickle=True)\n",
