modified:   Primary_school flowstab analysis.ipynb

--- a/Primary_school flowstab analysis.ipynb
+++ b/Primary_school flowstab analysis.ipynb
@@ -765,6 +765,7 @@
     "        forward_partitions['stabilities']=stabilities\n",
     "        np.save(f\"Forward_partitions/forward_partitions-tau={tau}.npy\", forward_partitions, allow_pickle=True)\n",
     "        fs.flow_clustering_forward[tau]=None\n",
+    "        del cluster_lists, stabilities\n",
     "        gc.collect()\n",
     "\n",
     "\n",
@@ -777,6 +778,7 @@
     "        backward_partitions['stabilities']=stabilities\n",
     "        np.save(f\"Backward_partitions/backward_partitions-tau={tau}.npy\", backward_partitions, allow_pickle=True)\n",
     "        fs.flow_clustering_backward[tau]=None\n",
+    "        del cluster_lists, stabilities\n",
     "        gc.collect()\n",
     "\n",
     "\n",
