--- a/Primary_school scale selection.ipynb
+++ b/Primary_school scale selection.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        " <Axes: xlabel='$log_{10}(t)$', ylabel='NVI'>]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -211,7 +211,7 @@
     "pgs.save_results(all_results_f, \"Results/results_f.pkl\")\n",
     "\n",
     "# plot results\n",
-    "pgs.plot_scan_plt(all_results_f, log_scale_n_clusters=True)"
+    "pgs.plot_scan_plt(all_results_f, log_scale_n_clusters=True, figure_name=\"Figures/scale_selection_f.svg\")"
    ]
   },
   {
