modified:   Primary_school flowstab analysis.ipynb

--- a/Primary_school flowstab analysis.ipynb
+++ b/Primary_school flowstab analysis.ipynb
@@ -739,7 +739,8 @@
     "\n",
     "\n",
     "df = pd.read_csv(\"Pre_processed_Data/primary_school_day2.csv\")\n",
-    "real_taus = np.logspace(-2, 7, 100)\n",
+    "real_s = np.logspace(-2, 7, 100)\n",
+    "real_taus=1/real_s\n",
     "\n",
     "for index in range(10):\n",
     "    taus=[i for x, i in enumerate(real_taus) if x%10==index]\n",
