modified:   visualisation.ipynb

--- a/visualisation.ipynb
+++ b/visualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3d73f38d",
    "metadata": {},
    "outputs": [
@@ -1168,6 +1168,7 @@
           }
          }
         },
+        "width": 400,
         "xaxis": {
          "visible": false
         },
@@ -1251,7 +1252,8 @@
     "    font_size=12,\n",
     "    legend_title=\"Class\",\n",
     "        paper_bgcolor='rgba(0,0,0,0)',\n",
-    "    plot_bgcolor='rgba(0,0,0,0)'\n",
+    "    plot_bgcolor='rgba(0,0,0,0)',\n",
+    "    width=400\n",
     ")\n",
     "\n",
     "fig.update_xaxes(visible=False)\n",
